refactor: fail faster and less code complexity due to structured concurrency. (#363)
Co-authored-by: Mateusz Czeladka <mateusz.czeladka@cardanofoundation.org>